# bert-onnx-rs-server

./: .gitattributes  Cargo.toml  README.md  requirements.txt
src/: main.rs  onnx_model.onnx  python_alternative.py  tokenizer.json
